FRI-245 Trace: record merge-duplicate-resolution as update not delete.